--- a/Lecture 3.1.ipynb
+++ b/Lecture 3.1.ipynb
@@ -83,10 +83,10 @@
     "# importing the zipfile module\n",
     "from zipfile import ZipFile\n",
     "\n",
-    "filename = \n",
+    "filename = '/Users/christopherreid/My Drive (christopherreid@arizona.edu)/Classes/6. Summer 2023/CSC 380 - Principles of Data Science/Lecture Slides/Lecture 3.1/spotify-top-50-playlist-songs-anxods.zip'\n",
     "\n",
     "# loading the temp.zip and creating a zip object\n",
-    "with ZipFile(\"/Users/christopherreid/My Drive (christopherreid@arizona.edu)/Classes/6. Summer 2023/CSC 380 - Principles of Data Science/spotify-top-50-playlist-songs-anxods.zip\", 'r') as zObject:\n",
+    "with ZipFile(filename, 'r') as zObject:\n",
     "    \n",
     "    # Extracting all the members of zip\n",
     "    # into specific location\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "global_50_path = '/Users/christopherreid/My Drive (christopherreid@arizona.edu)/Classes/6. Summer 2023/CSC 380 - Principles of Data Science/Lecture 3.1/spotify-top-50-playlist-songs-anxods/data/spotify-streaming-top-50-world.csv'"
+    "global_50_path = '/Users/christopherreid/My Drive (christopherreid@arizona.edu)/Classes/6. Summer 2023/CSC 380 - Principles of Data Science/Lecture Slides/Lecture 3.1/spotify-top-50/data/spotify-streaming-top-50-world.csv'"
    ]
   },
   {
